--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon lib/index.js"
+    "dev": "nodemon lib/app.js",
+    "lint": "npx eslint src/index.ts",
+    "lint:fix": "eslint 'src/**/*.{ts}' --fix",
+    "prepare": "husky i"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.21",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +23,9 @@
   },
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "globals": "^15.9.0",
+    "husky": "^8.0.0",
+    "prettier": "^3.3.3",
     "typescript": "^5.5.4"
   }
 }
