--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
-MONGODB_URL = 'mongodb+srv://siddhkothari:DkTVtEAZdH1mb3ng@cluster0.u4umjsm.mongodb.net/auth'
+MONGODB_URL = 'mongodb+srv://siddhkothari:DkTVtEAZdH1mb3ng@cluster0.u4umjsm.mongodb.net/college'
+JWTSECRET = 'collegeTokenSiddh'
