--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -25,7 +26,9 @@
     "nodemon": "^3.1.4"
   },
   "devDependencies": {
-    "@types/node": "^22.2.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^22.3.0",
     "globals": "^15.9.0",
     "husky": "^8.0.0",
     "prettier": "^3.3.3",
