--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "lint": "eslint --fix -c *.js,*.jsx .",
     "prepare": "husky",
     "format": "prettier --write \"src/**/*.ts\" ",
-    "format:check": "prettier --check \"src/**/*.ts\" "
+    "format:check": "prettier --check \"src/**/*.ts\" ",
+    "test:dev": "jest --watch src/testing"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4"
