--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "winston": "^3.14.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
